--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       - name: Run tests with coverage
         run: |
-          PYTHONDONTWRITEBYTECODE=1 pytest
+          PYTHONPATH=$(pwd) PYTHONDONTWRITEBYTECODE=1 pytest
 
       - name: Upload coverage
         uses: actions/upload-artifact@v4
